package org.example.composite;

public interface Expression {

    double getValue();
}
